# docs/swagger.json
@@ -30,6 +30,15 @@
                     "comment"
                 ],
                 "summary": "Get all comments",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Type Bearer your_token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -58,6 +67,13 @@
                 ],
                 "summary": "Post a new comment",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Type Bearer your_token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "create a comment",
                         "name": "models.Comment",
@@ -99,6 +115,13 @@
                 "summary": "Get comment details for the given ID",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Type Bearer your_token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "type": "integer",
                         "description": "ID of the comment",
                         "name": "ID",
@@ -134,6 +157,13 @@
                 ],
                 "summary": "Update comment for the given ID",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Type Bearer your_token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "ID of the comment",
@@ -180,6 +210,13 @@
                 "summary": "Delete comment details for a given ID",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Type Bearer your_token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "type": "integer",
                         "description": "ID of the comment",
                         "name": "ID",
@@ -216,6 +253,15 @@
                     "photo"
                 ],
                 "summary": "Get all photos",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Type Bearer your_token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -244,6 +290,13 @@
                 ],
                 "summary": "Post a new photo",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Type Bearer your_token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "create a photo",
                         "name": "models.Photo",
@@ -285,6 +338,13 @@
                 "summary": "Get photo details for the given photo ID",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Type Bearer your_token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "type": "integer",
                         "description": "ID of the photo",
                         "name": "ID",
@@ -320,6 +380,13 @@
                 ],
                 "summary": "Update photo for the given ID",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Type Bearer your_token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "ID of the photo",
@@ -366,6 +433,13 @@
                 "summary": "Delete photo details for a given ID",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Type Bearer your_token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "type": "integer",
                         "description": "ID of the photo",
                         "name": "ID",
@@ -402,6 +476,15 @@
                     "social media"
                 ],
                 "summary": "Get all social media",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Type Bearer your_token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -430,6 +513,13 @@
                 ],
                 "summary": "Post a new social media",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Type Bearer your_token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "create a social media",
                         "name": "models.Socialmedia",
@@ -471,6 +561,13 @@
                 "summary": "Get social media details for the given ID",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Type Bearer your_token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "type": "integer",
                         "description": "ID of the social media",
                         "name": "ID",
@@ -506,6 +603,13 @@
                 ],
                 "summary": "Update social media for the given ID",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Type Bearer your_token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "ID of the social media",
@@ -551,6 +655,13 @@
                 ],
                 "summary": "Delete social media details for a given ID",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Type Bearer your_token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "ID of the social media",
